results/SpecGenBench/2-shot/log-SelfDividing-2023_11_06_03_41_23.txt
class SelfDeviding {
    //@ requires num > 0;
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.toString().length(); num % (num.toString().charAt(i) - '0') == 0);
    public static boolean isSelfDividable(int num) {
        int temp = num;
        //@ maintaining temp > 0;
        //@ maintaining (\forall int i; 0 <= i && i < temp.toString().length(); num % (temp.toString().charAt(i) - '0') == 0);
        //@ decreases temp;
        while (temp > 0) {
            int digit = temp % 10;
            if (digit == 0 || num % digit != 0) {
                return false;
            }
            temp /= 10;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: int cannot be dereferenced
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.toString().length(); num % (num.toString().charAt(i) - '0') == 0);
                                                              ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:3: error: int cannot be dereferenced
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.toString().length(); num % (num.toString().charAt(i) - '0') == 0);
                                                                                              ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:7: error: int cannot be dereferenced
        //@ maintaining (\forall int i; 0 <= i && i < temp.toString().length(); num % (temp.toString().charAt(i) - '0') == 0);
                                                          ^
/home/max/Documents/JMLGPT/tmp/SelfDividing.java:7: error: int cannot be dereferenced
        //@ maintaining (\forall int i; 0 <= i && i < temp.toString().length(); num % (temp.toString().charAt(i) - '0') == 0);
                                                                                           ^
4 errors

